--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
-  "name": "shopping_chart_project",
-  "version": "1.0.0",
-  "author": "Tina Huang",
-  "email": "t1229te@gmail.com",
-  "private": false,
+  "name": "newacit2911",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node app.js"
+    "test": "mocha",
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "captchapng": "0.0.1",
-    "connect-mongo": "^2.0.3",
-    "cookie-parser": "^1.4.4",
-    "debug": "^2.6.9",
-    "encodeurl": "^1.0.2",
-    "escape-html": "^1.0.3",
+    "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
     "express": "^4.16.4",
-    "express-session": "^1.16.1",
     "hbs": "^4.0.4",
+    "http-errors": "~1.6.2",
+    "mongo": "^0.1.0",
     "mongodb": "^3.2.3",
-    "morgan": "^1.9.1",
-    "path": "^0.12.7",
-    "request": "^2.88.0",
-    "serve-favicon": "^2.4.5"
+    "morgan": "~1.9.0",
+    "nock": "^10.0.6",
+    "pug": "2.0.0-beta11",
+    "should": "^13.2.3",
+    "superagent": "^5.0.5",
+    "supertest": "^4.0.2"
   },
-  "devDependencies": {},
-  "main": "app.js",
-  "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "mocha": "^6.1.4"
+  }
 }
-// test2
