--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "hbs": "^4.0.4",
     "http-errors": "~1.6.2",
     "mongo": "^0.1.0",
     "mongodb": "^3.2.3",
     "morgan": "~1.9.0",
     "nock": "^10.0.6",
+    "popup-tools": "^1.0.2",
+    "popups": "^1.1.3",
     "pug": "2.0.0-beta11",
     "should": "^13.2.3",
     "superagent": "^5.0.5",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "window-popup": "^1.1.0"
   },
   "devDependencies": {
     "mocha": "^6.1.4"
