--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
     "captchapng": "0.0.1",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
+    "connect-mongo": "^2.0.3",
+    "cookie-parser": "^1.4.4",
+    "debug": "^2.6.9",
+    "encodeurl": "^1.0.2",
+    "escape-html": "^1.0.3",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "hbs": "^4.0.4",
     "http-errors": "~1.6.2",
     "mongo": "^0.1.0",
     "mongodb": "^3.2.3",
-    "morgan": "~1.9.0",
+    "morgan": "^1.9.1",
     "nock": "^10.0.6",
+    "path": "^0.12.7",
     "popup-tools": "^1.0.2",
     "popups": "^1.1.3",
     "pug": "2.0.0-beta11",
+    "request": "^2.88.0",
+    "serve-favicon": "^2.5.0",
     "should": "^13.2.3",
     "superagent": "^5.0.5",
     "supertest": "^4.0.2",
