--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^3.2.3",
     "morgan": "^1.9.1",
     "nock": "^10.0.6",
+    "node-schedule": "^1.3.2",
     "path": "^0.12.7",
     "popup-tools": "^1.0.2",
     "popups": "^1.1.3",
